2019-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (RegisterWEBPImage): Use sprintf to format version
	since snprintf is not available in old Visual Studio.

2019-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c: Make more data const.

	* www/INSTALL-unix.rst: Add documentation for how to install URW
	fonts from various package management systems.

2019-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/authors.rst: Add authorship attribution to Samuel Thibault
	for contributing support for the Braille image format.

	* coders/braille.c: Add support for Braille image format by Samuel
	Thibault.  Patch submitted via SourceForge patch #59 "Add braille
	image format support.

2019-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c: Make more data const.

	* magick/signature.c: Make more data const.

	* magick/quantize.c: Make more data const.

	* magick/attribute.c: Make more data const.

	* coders/png.c: Make more data const.

	* coders/mpeg.c: Make more data const.

	* coders/wmf.c: Make more data const.

	* coders/tile.c: Make more data const.

2019-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enum_strings.c: Make more data const.

2019-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c: Make more data const.

	* magick/type.c (GetTypeInfoByFamily): Make more data const.

	* magick/unix_port.c (MagickGetMMUPageSize): Decrease initialized
	data.

	* magick/utility.c (GetPageGeometry): Make more data const.

	* coders/pdf.c (WritePDFImage): Allocate working buffer on stack
	and pass as argument to EscapeParenthesis() to eliminate a thread
	safety problem and also reduce BSS size.

	* coders/webp.c (RegisterWEBPImage): Fix compiler warning.

	* coders/jbig.c (RegisterJBIGImage): Make more data const.

	* coders/pict.c (DecodeImage): Allocate output buffer used by
	ExpandBuffer() on the stack rather than as static data private to