@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190520"
-#define public MagickPackageReleaseDate "snapshot-20190520"
+#define public MagickPackageVersionAddendum ".020190522"
+#define public MagickPackageReleaseDate "snapshot-20190522"
