@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2019-05-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/animate.c: Reduce initialized static allocations.</li>
+<li>magick/display.c: Reduce initialized static allocations.</li>
+<li>magick/widget.c (MagickSplitNDLTextToList): Add static
+implementation function.</li>
+</ul>
+</blockquote>
 <p>2019-05-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
